Adjust gallery heading margin, fix popup z-index

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -13,7 +13,7 @@
   box-shadow: 0 5px 12px rgba(0,0,0,.2);
   height: 48rem;
   width: 25rem;
-  z-index: 1000;
+  z-index: 100;
 
   &__heading {
     font-size: 2rem;
