--- a/src/scss/pages/_gallery.scss
+++ b/src/scss/pages/_gallery.scss
@@ -6,6 +6,7 @@
 
   &__heading {
     font-size: 5rem;
+    margin-bottom: 2rem;
   }
 
   @include respond(tablet-lg) {
@@ -161,7 +162,7 @@ section .container {
   transition: all .6s;
   visibility: hidden;
   width: 100%;
-  z-index: 4;
+  z-index: 1000;
 
   /* Open States */
   &:target {
